# xgrow

./: .cvsignore  .gitignore  .hgignore  .hgtags  .nfs00895191000000c3  .pre-commit-config.yaml  AB.tile  ABdiff.tile  MANIFEST.in  Makefile  README.md  XOR.tile  barcode.tile  barseed.tile  binary.tile  comb.tile  count.tile  disabled-pyproject.toml  example-runs  filter-by-tiles.pl  grow.c  grow.h  linear.tile  linear2.tile  linear3.tile  makecc  makeccefence  makeccmac  makeccprof  makelinear  meson.build  notes-on-stxg-format.md  pyproject.toml  readme  setup.py  shell.nix  sier2x2.tile  sier3x3.tile  stxg.py  tiles.el  (+9 more)
examples/: barish-originalseqs.stxg  barish-originalseqs.yaml  barish-perfect.yaml  sierpinski.stxg  sierpinski.yaml  tallrect.seed
old-stuff/: example-runs-talks  readme
pytilegen/: nn.py  tilegen.py
src/: .clang-format  grow.c  grow.h  xgrow-tests.c  xgrow-tests.h  xgrow.c
tests/: test_tileset_handling.py  test_xgrow_options.py
tilesets/: 1dXOR.tiles  9-square.tiles  AB.tiles  BinaryCounter.tiles  BinaryCounterSquare.tiles  BinaryTree.tiles  BusyBeaver3Square.tiles  COPYseed.tiles  Rule110.tiles  Rule110Drandom.tiles  Rule110V.tiles  UnarySquareBig.tiles  XOR.tiles  XORproof2x2.tiles  asyncdemo.tiles  barcode.tiles  barseed.tiles  binary.tiles  binary_unique.tiles  binarycap.tiles  binarycap_proof.tiles  diagonal.tiles  (+15 more)
xgrow/: CHANGELOG.md  __init__.py  _script_xgrow.py  libapi.py  meson.build  parseoutput.py  stxg.py  tileset.py  xcolors.py  xgrow.py  xgrow_lib.py  xgrow_parallel.py  xgrow_subprocess.py  xgrow_wrap.py  xgrowoutput.py
(+92 files in other folders)
